--- a/classes/_childprocess_.childprocessspace.html
+++ b/classes/_childprocess_.childprocessspace.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ChildProcessSpace | @suin/runspace - v1.0.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v1.0.0">
+	<title>ChildProcessSpace | @suin/runspace - v1.0.1</title>
+	<meta name="description" content="Documentation for @suin/runspace - v1.0.1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v1.0.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v1.0.1</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -134,7 +134,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L18">childProcess.ts:18</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L18">childProcess.ts:18</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -161,7 +161,7 @@
 					<div class="tsd-signature tsd-kind-icon">#events<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TypedEventEmitter</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>error<span class="tsd-signature-symbol">: </span><a href="../modules/_index_.html#errorlistener" class="tsd-signature-type">ErrorListener</a><span class="tsd-signature-symbol">; </span>message<span class="tsd-signature-symbol">: </span><a href="../modules/_index_.html#messagelistener" class="tsd-signature-type">MessageListener</a><span class="tsd-signature-symbol">; </span>rejection<span class="tsd-signature-symbol">: </span><a href="../modules/_index_.html#rejectionlistener" class="tsd-signature-type">RejectionListener</a><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> = createEventEmitter()</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L17">childProcess.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L17">childProcess.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -171,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">#filename<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L16">childProcess.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L16">childProcess.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -181,7 +181,7 @@
 					<div class="tsd-signature tsd-kind-icon">#worker<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">ChildProcess</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L18">childProcess.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L18">childProcess.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -198,7 +198,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L24">childProcess.ts:24</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L24">childProcess.ts:24</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -218,7 +218,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L64">childProcess.ts:64</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L63">childProcess.ts:63</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -241,7 +241,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L72">childProcess.ts:72</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L71">childProcess.ts:71</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -264,7 +264,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L28">childProcess.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L28">childProcess.ts:28</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -291,7 +291,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#send">send</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L60">childProcess.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L59">childProcess.ts:59</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -315,7 +315,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#start">start</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L36">childProcess.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L36">childProcess.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -333,7 +333,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#stop">stop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L46">childProcess.ts:46</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L45">childProcess.ts:45</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -351,7 +351,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitstop">waitStop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/childProcess.ts#L54">childProcess.ts:54</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/childProcess.ts#L53">childProcess.ts:53</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -439,11 +439,20 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_childprocess_.html#env" class="tsd-kind-icon">Env</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-has-type-parameter tsd-is-not-exported">
+						<a href="../modules/_childprocess_.html#writable" class="tsd-kind-icon">Writable</a>
+					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-is-not-exported">
 						<a href="../modules/_childprocess_.html#converterrorliketoerror" class="tsd-kind-icon">convert<wbr>Error<wbr>Like<wbr>ToError</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-is-not-exported">
 						<a href="../modules/_childprocess_.html#iserror" class="tsd-kind-icon">is<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-object-literal tsd-parent-kind-module">
+						<a href="../modules/_childprocess_.html#env-1" class="tsd-kind-icon">Env</a>
 					</li>
 				</ul>
 			</nav>
@@ -459,6 +468,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li>
