--- a/modules/_thread_.html
+++ b/modules/_thread_.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;thread&quot; | @suin/runspace - v1.0.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v1.0.0">
+	<title>&quot;thread&quot; | @suin/runspace - v1.0.1</title>
+	<meta name="description" content="Documentation for @suin/runspace - v1.0.1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v1.0.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v1.0.1</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -99,7 +99,7 @@
 					<div class="tsd-signature tsd-kind-icon">Worker<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>filename<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/thread.ts#L93">thread.ts:93</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/thread.ts#L93">thread.ts:93</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -120,7 +120,7 @@
 					<div class="tsd-signature tsd-kind-icon">Worker<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/thread.ts#L97">thread.ts:97</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/thread.ts#L97">thread.ts:97</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-object-literal">
@@ -133,7 +133,7 @@
 							<li class="tsd-description">
 								<aside class="tsd-sources">
 									<ul>
-										<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.0/thread.ts#L98">thread.ts:98</a></li>
+										<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.1/thread.ts#L98">thread.ts:98</a></li>
 									</ul>
 								</aside>
 								<h4 class="tsd-parameters-title">Parameters</h4>
@@ -206,6 +206,7 @@
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
+				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
