--- a/interfaces/_index_.space.html
+++ b/interfaces/_index_.space.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Space | @suin/runspace - v1.0.2</title>
-	<meta name="description" content="Documentation for @suin/runspace - v1.0.2">
+	<title>Space | @suin/runspace - v1.1.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v1.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v1.0.2</a>
+					<a href="../index.html" class="title">@suin/runspace - v1.1.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -101,6 +101,7 @@
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="_index_.space.html#send" class="tsd-kind-icon">send</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="_index_.space.html#start" class="tsd-kind-icon">start</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="_index_.space.html#stop" class="tsd-kind-icon">stop</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="_index_.space.html#waitmessage" class="tsd-kind-icon">wait<wbr>Message</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-interface"><a href="_index_.space.html#waitstop" class="tsd-kind-icon">wait<wbr>Stop</a></li>
 							</ul>
 						</section>
@@ -115,7 +116,7 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Running<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.2/index.ts#L8">index.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/index.ts#L8">index.ts:8</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -139,7 +140,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.2/index.ts#L38">index.ts:38</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/index.ts#L43">index.ts:43</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -163,7 +164,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.2/index.ts#L39">index.ts:39</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/index.ts#L44">index.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -180,7 +181,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.2/index.ts#L40">index.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/index.ts#L45">index.ts:45</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -206,7 +207,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.2/index.ts#L29">index.ts:29</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/index.ts#L29">index.ts:29</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -237,7 +238,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.2/index.ts#L13">index.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/index.ts#L13">index.ts:13</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -259,7 +260,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.2/index.ts#L18">index.ts:18</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/index.ts#L18">index.ts:18</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -267,6 +268,34 @@
 									<p>Stops this space.</p>
 								</div>
 							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface">
+					<a name="waitmessage" class="tsd-anchor"></a>
+					<h3>wait<wbr>Message</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
+						<li class="tsd-signature tsd-kind-icon">wait<wbr>Message<span class="tsd-signature-symbol">(</span>predicate<span class="tsd-signature-symbol">: </span><a href="../modules/_index_.html#waitmessagepredicate" class="tsd-signature-type">WaitMessagePredicate</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/index.ts#L34">index.ts:34</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Returns a promise object that resolves when the given predicate returns true.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>predicate: <a href="../modules/_index_.html#waitmessagepredicate" class="tsd-signature-type">WaitMessagePredicate</a></h5>
+								</li>
+							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
@@ -281,7 +310,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.2/index.ts#L23">index.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/index.ts#L23">index.ts:23</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -356,6 +385,9 @@
 								<a href="_index_.space.html#stop" class="tsd-kind-icon">stop</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-interface">
+								<a href="_index_.space.html#waitmessage" class="tsd-kind-icon">wait<wbr>Message</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-interface">
 								<a href="_index_.space.html#waitstop" class="tsd-kind-icon">wait<wbr>Stop</a>
 							</li>
 						</ul>
@@ -370,6 +402,9 @@
 					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
 						<a href="../modules/_index_.html#rejectionlistener" class="tsd-kind-icon">Rejection<wbr>Listener</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/_index_.html#waitmessagepredicate" class="tsd-kind-icon">Wait<wbr>Message<wbr>Predicate</a>
 					</li>
 				</ul>
 			</nav>
