--- a/modules/_eventemitter_.html
+++ b/modules/_eventemitter_.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;eventEmitter&quot; | @suin/runspace - v1.0.2</title>
-	<meta name="description" content="Documentation for @suin/runspace - v1.0.2">
+	<title>&quot;eventEmitter&quot; | @suin/runspace - v1.1.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v1.1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v1.0.2</a>
+					<a href="../index.html" class="title">@suin/runspace - v1.1.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -70,13 +70,33 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Type aliases</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported"><a href="_eventemitter_.html#spaceeventemitter" class="tsd-kind-icon">Space<wbr>Event<wbr>Emitter</a></li>
+							</ul>
+						</section>
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_eventemitter_.html#createeventemitter" class="tsd-kind-icon">create<wbr>Event<wbr>Emitter</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_eventemitter_.html#waitmessage" class="tsd-kind-icon">wait<wbr>Message</a></li>
 							</ul>
 						</section>
 					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Type aliases</h2>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
+					<a name="spaceeventemitter" class="tsd-anchor"></a>
+					<h3>Space<wbr>Event<wbr>Emitter</h3>
+					<div class="tsd-signature tsd-kind-icon">Space<wbr>Event<wbr>Emitter<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">TypedEventEmitter</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>error<span class="tsd-signature-symbol">: </span><a href="_index_.html#errorlistener" class="tsd-signature-type">ErrorListener</a><span class="tsd-signature-symbol">; </span>message<span class="tsd-signature-symbol">: </span><a href="_index_.html#messagelistener" class="tsd-signature-type">MessageListener</a><span class="tsd-signature-symbol">; </span>rejection<span class="tsd-signature-symbol">: </span><a href="_index_.html#rejectionlistener" class="tsd-signature-type">RejectionListener</a><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/eventEmitter.ts#L10">eventEmitter.ts:10</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -85,16 +105,42 @@
 					<a name="createeventemitter" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagConst">Const</span> create<wbr>Event<wbr>Emitter</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
-						<li class="tsd-signature tsd-kind-icon">create<wbr>Event<wbr>Emitter<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">TypedEventEmitter</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>error<span class="tsd-signature-symbol">: </span><a href="_index_.html#errorlistener" class="tsd-signature-type">ErrorListener</a><span class="tsd-signature-symbol">; </span>message<span class="tsd-signature-symbol">: </span><a href="_index_.html#messagelistener" class="tsd-signature-type">MessageListener</a><span class="tsd-signature-symbol">; </span>rejection<span class="tsd-signature-symbol">: </span><a href="_index_.html#rejectionlistener" class="tsd-signature-type">RejectionListener</a><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">create<wbr>Event<wbr>Emitter<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_eventemitter_.html#spaceeventemitter" class="tsd-signature-type">SpaceEventEmitter</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.0.2/eventEmitter.ts#L5">eventEmitter.ts:5</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/eventEmitter.ts#L16">eventEmitter.ts:16</a></li>
 								</ul>
 							</aside>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">TypedEventEmitter</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>error<span class="tsd-signature-symbol">: </span><a href="_index_.html#errorlistener" class="tsd-signature-type">ErrorListener</a><span class="tsd-signature-symbol">; </span>message<span class="tsd-signature-symbol">: </span><a href="_index_.html#messagelistener" class="tsd-signature-type">MessageListener</a><span class="tsd-signature-symbol">; </span>rejection<span class="tsd-signature-symbol">: </span><a href="_index_.html#rejectionlistener" class="tsd-signature-type">RejectionListener</a><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <a href="_eventemitter_.html#spaceeventemitter" class="tsd-signature-type">SpaceEventEmitter</a></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module">
+					<a name="waitmessage" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> wait<wbr>Message</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
+						<li class="tsd-signature tsd-kind-icon">wait<wbr>Message<span class="tsd-signature-symbol">(</span>events<span class="tsd-signature-symbol">: </span><a href="_eventemitter_.html#spaceeventemitter" class="tsd-signature-type">SpaceEventEmitter</a>, predicate<span class="tsd-signature-symbol">: </span><a href="_index_.html#waitmessagepredicate" class="tsd-signature-type">WaitMessagePredicate</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/eventEmitter.ts#L18">eventEmitter.ts:18</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>events: <a href="_eventemitter_.html#spaceeventemitter" class="tsd-signature-type">SpaceEventEmitter</a></h5>
+								</li>
+								<li>
+									<h5>predicate: <a href="_index_.html#waitmessagepredicate" class="tsd-signature-type">WaitMessagePredicate</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -134,8 +180,14 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
+						<a href="_eventemitter_.html#spaceeventemitter" class="tsd-kind-icon">Space<wbr>Event<wbr>Emitter</a>
+					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="_eventemitter_.html#createeventemitter" class="tsd-kind-icon">create<wbr>Event<wbr>Emitter</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="_eventemitter_.html#waitmessage" class="tsd-kind-icon">wait<wbr>Message</a>
 					</li>
 				</ul>
 			</nav>
