--- a/globals.html
+++ b/globals.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>@suin/runspace - v1.1.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v1.1.0">
+	<title>@suin/runspace - v2.0.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">@suin/runspace - v1.1.0</a>
+					<a href="index.html" class="title">@suin/runspace - v2.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -56,7 +56,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1>@suin/runspace - v1.1.0</h1>
+			<h1>@suin/runspace - v2.0.0</h1>
 		</div>
 	</div>
 </header>
@@ -72,7 +72,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-module"><a href="modules/_childprocess_.html" class="tsd-kind-icon">&quot;child<wbr>Process&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_childprocess_worker_.html" class="tsd-kind-icon">&quot;child<wbr>Process.worker&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_eventemitter_.html" class="tsd-kind-icon">&quot;event<wbr>Emitter&quot;</a></li>
+								<li class="tsd-kind-module"><a href="modules/_events_.html" class="tsd-kind-icon">&quot;events&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_fixtures_index_.html" class="tsd-kind-icon">&quot;fixtures/index&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_index_.html" class="tsd-kind-icon">&quot;index&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_systemmessage_.html" class="tsd-kind-icon">&quot;system<wbr>Message&quot;</a></li>
@@ -97,7 +97,7 @@
 						<a href="modules/_childprocess_worker_.html">&quot;child<wbr>Process.worker&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="modules/_eventemitter_.html">&quot;event<wbr>Emitter&quot;</a>
+						<a href="modules/_events_.html">&quot;events&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="modules/_fixtures_index_.html">&quot;fixtures/index&quot;</a>
@@ -128,7 +128,6 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
-				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
