--- a/modules/_childprocess_worker_.html
+++ b/modules/_childprocess_worker_.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;childProcess.worker&quot; | @suin/runspace - v1.1.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v1.1.0">
+	<title>&quot;childProcess.worker&quot; | @suin/runspace - v2.0.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v1.1.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -94,7 +94,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/childProcess.worker.ts#L44">childProcess.worker.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.worker.ts#L44">childProcess.worker.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -111,19 +111,19 @@
 					<a name="hideenvironmentvariablesfromuntrustedprogram" class="tsd-anchor"></a>
 					<h3>hide<wbr>Environment<wbr>Variables<wbr>From<wbr>Untrusted<wbr>Program</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module tsd-is-not-exported">
-						<li class="tsd-signature tsd-kind-icon">hide<wbr>Environment<wbr>Variables<wbr>From<wbr>Untrusted<wbr>Program<span class="tsd-signature-symbol">(</span>env<span class="tsd-signature-symbol">: </span><a href="_childprocess_.html#env" class="tsd-signature-type">Env</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">hide<wbr>Environment<wbr>Variables<wbr>From<wbr>Untrusted<wbr>Program<span class="tsd-signature-symbol">(</span>env<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Env</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/childProcess.worker.ts#L40">childProcess.worker.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.worker.ts#L40">childProcess.worker.ts:40</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>env: <a href="_childprocess_.html#env" class="tsd-signature-type">Env</a></h5>
+									<h5>env: <span class="tsd-signature-type">Env</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -140,7 +140,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/childProcess.worker.ts#L53">childProcess.worker.ts:53</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.worker.ts#L53">childProcess.worker.ts:53</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -163,7 +163,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/childProcess.worker.ts#L7">childProcess.worker.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/childProcess.worker.ts#L7">childProcess.worker.ts:7</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -196,7 +196,7 @@
 						<a href="_childprocess_worker_.html">&quot;child<wbr>Process.worker&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_eventemitter_.html">&quot;event<wbr>Emitter&quot;</a>
+						<a href="_events_.html">&quot;events&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="_fixtures_index_.html">&quot;fixtures/index&quot;</a>
@@ -239,7 +239,6 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
-				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
