--- a/modules/_events_.html
+++ b/modules/_events_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;thread&quot; | @suin/runspace - v2.0.0</title>
+	<title>&quot;events&quot; | @suin/runspace - v2.0.0</title>
 	<meta name="description" content="Documentation for @suin/runspace - v2.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_thread_.html">&quot;thread&quot;</a>
+					<a href="_events_.html">&quot;events&quot;</a>
 				</li>
 			</ul>
-			<h1>Module &quot;thread&quot;</h1>
+			<h1>Module &quot;events&quot;</h1>
 		</div>
 	</div>
 </header>
@@ -70,32 +70,13 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Classes</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-class tsd-parent-kind-module"><a href="../classes/_thread_.threadspace.html" class="tsd-kind-icon">Thread<wbr>Space</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section tsd-is-not-exported">
-							<h3>Variables</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-variable tsd-parent-kind-module tsd-is-not-exported"><a href="_thread_.html#workerfile" class="tsd-kind-icon">worker<wbr>File</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-module tsd-is-not-exported"><a href="../classes/_events_.eventemitterimpl.html" class="tsd-kind-icon">Event<wbr>Emitter<wbr>Impl</a></li>
 							</ul>
 						</section>
 					</div>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
-				<h2>Variables</h2>
-				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-module tsd-is-not-exported">
-					<a name="workerfile" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> worker<wbr>File</h3>
-					<div class="tsd-signature tsd-kind-icon">worker<wbr>File<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = path.join(__dirname, &quot;thread.worker.js&quot;)</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.ts#L17">thread.ts:17</a></li>
-						</ul>
-					</aside>
 				</section>
 			</section>
 		</div>
@@ -111,7 +92,7 @@
 					<li class=" tsd-kind-module">
 						<a href="_childprocess_worker_.html">&quot;child<wbr>Process.worker&quot;</a>
 					</li>
-					<li class=" tsd-kind-module">
+					<li class="current tsd-kind-module">
 						<a href="_events_.html">&quot;events&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
@@ -123,7 +104,7 @@
 					<li class=" tsd-kind-module">
 						<a href="_systemmessage_.html">&quot;system<wbr>Message&quot;</a>
 					</li>
-					<li class="current tsd-kind-module">
+					<li class=" tsd-kind-module">
 						<a href="_thread_.html">&quot;thread&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
@@ -133,11 +114,8 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-class tsd-parent-kind-module">
-						<a href="../classes/_thread_.threadspace.html" class="tsd-kind-icon">Thread<wbr>Space</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-parent-kind-module tsd-is-not-exported">
-						<a href="_thread_.html#workerfile" class="tsd-kind-icon">worker<wbr>File</a>
+					<li class=" tsd-kind-class tsd-parent-kind-module tsd-is-not-exported">
+						<a href="../classes/_events_.eventemitterimpl.html" class="tsd-kind-icon">Event<wbr>Emitter<wbr>Impl</a>
 					</li>
 				</ul>
 			</nav>
