--- a/modules/_fixtures_index_.html
+++ b/modules/_fixtures_index_.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;fixtures/index&quot; | @suin/runspace - v1.1.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v1.1.0">
+	<title>&quot;fixtures/index&quot; | @suin/runspace - v2.0.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v1.1.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -101,7 +101,7 @@
 					<div class="tsd-signature tsd-kind-icon">echo<wbr>Message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/echoMessage.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/echoMessage.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L1">fixtures/index.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L1">fixtures/index.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -111,7 +111,7 @@
 					<div class="tsd-signature tsd-kind-icon">evaluates<wbr>Message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/evaluatesMessage.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/evaluatesMessage.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L2">fixtures/index.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L2">fixtures/index.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -121,7 +121,7 @@
 					<div class="tsd-signature tsd-kind-icon">sends<wbr>Hello<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/sendsHello.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/sendsHello.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L3">fixtures/index.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L3">fixtures/index.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -131,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">sends<wbr>Hello<wbr>In500milliseconds<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/sendsHelloIn500milliseconds.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/sendsHelloIn500milliseconds.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L4">fixtures/index.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L4">fixtures/index.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -141,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">sends<wbr>One<wbr>Two<wbr>Three<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/sendsOneTwoThree.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/sendsOneTwoThree.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L6">fixtures/index.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L6">fixtures/index.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -151,7 +151,7 @@
 					<div class="tsd-signature tsd-kind-icon">stops<wbr>Immediately<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/stopsImmediately.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/stopsImmediately.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L7">fixtures/index.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L7">fixtures/index.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -161,7 +161,7 @@
 					<div class="tsd-signature tsd-kind-icon">stops<wbr>In500milliseconds<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/stopsIn500milliseconds.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/stopsIn500milliseconds.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L8">fixtures/index.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L8">fixtures/index.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -171,7 +171,7 @@
 					<div class="tsd-signature tsd-kind-icon">stops<wbr>Never<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/stopsNever.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/stopsNever.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L9">fixtures/index.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L9">fixtures/index.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -181,7 +181,7 @@
 					<div class="tsd-signature tsd-kind-icon">thread<wbr>Access<wbr>Parent<wbr>Port<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/thread.accessParentPort.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/thread.accessParentPort.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L11">fixtures/index.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L11">fixtures/index.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -191,7 +191,7 @@
 					<div class="tsd-signature tsd-kind-icon">thread<wbr>Access<wbr>Worker<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/thread.accessWorkerData.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/thread.accessWorkerData.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L10">fixtures/index.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L10">fixtures/index.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -201,7 +201,7 @@
 					<div class="tsd-signature tsd-kind-icon">throws<wbr>Custom<wbr>Error<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/throwsCustomError.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/throwsCustomError.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L12">fixtures/index.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L12">fixtures/index.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -211,7 +211,7 @@
 					<div class="tsd-signature tsd-kind-icon">throws<wbr>Error<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/throwsError.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/throwsError.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L13">fixtures/index.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L13">fixtures/index.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -221,7 +221,7 @@
 					<div class="tsd-signature tsd-kind-icon">throws<wbr>String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/throwsString.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/throwsString.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L14">fixtures/index.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L14">fixtures/index.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -231,7 +231,7 @@
 					<div class="tsd-signature tsd-kind-icon">unhandled<wbr>Rejection<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/unhandledRejection.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/unhandledRejection.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L15">fixtures/index.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L15">fixtures/index.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -241,7 +241,7 @@
 					<div class="tsd-signature tsd-kind-icon">unhandled<wbr>Rejection<wbr>String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/unhandledRejectionString.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/unhandledRejectionString.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/fixtures/index.ts#L16">fixtures/index.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/fixtures/index.ts#L16">fixtures/index.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -260,7 +260,7 @@
 						<a href="_childprocess_worker_.html">&quot;child<wbr>Process.worker&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_eventemitter_.html">&quot;event<wbr>Emitter&quot;</a>
+						<a href="_events_.html">&quot;events&quot;</a>
 					</li>
 					<li class="current tsd-kind-module">
 						<a href="_fixtures_index_.html">&quot;fixtures/index&quot;</a>
@@ -336,7 +336,6 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
-				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
