--- a/modules/_systemmessage_.html
+++ b/modules/_systemmessage_.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;systemMessage&quot; | @suin/runspace - v1.1.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v1.1.0">
+	<title>&quot;systemMessage&quot; | @suin/runspace - v2.0.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v1.1.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -70,34 +70,26 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Type aliases</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported"><a href="_systemmessage_.html#errormessage" class="tsd-kind-icon">Error<wbr>Message</a></li>
 								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported"><a href="_systemmessage_.html#systemmessage" class="tsd-kind-icon">System<wbr>Message</a></li>
-								<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="_systemmessage_.html#systemmessagecontainer" class="tsd-kind-icon">System<wbr>Message<wbr>Container</a></li>
 								<li class="tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported"><a href="_systemmessage_.html#unhandledrejectionmessage" class="tsd-kind-icon">Unhandled<wbr>Rejection<wbr>Message</a></li>
 							</ul>
 						</section>
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-function tsd-parent-kind-module tsd-is-not-exported"><a href="_systemmessage_.html#iserrormessage" class="tsd-kind-icon">is<wbr>Error<wbr>Message</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-module tsd-is-not-exported"><a href="_systemmessage_.html#issystemmessage" class="tsd-kind-icon">is<wbr>System<wbr>Message</a></li>
-								<li class="tsd-kind-function tsd-parent-kind-module"><a href="_systemmessage_.html#issystemmessagecontainer" class="tsd-kind-icon">is<wbr>System<wbr>Message<wbr>Container</a></li>
 								<li class="tsd-kind-function tsd-parent-kind-module tsd-is-not-exported"><a href="_systemmessage_.html#isunhandledrejectionmessage" class="tsd-kind-icon">is<wbr>Unhandled<wbr>Rejection<wbr>Message</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section ">
-							<h3>Object literals</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-object-literal tsd-parent-kind-module"><a href="_systemmessage_.html#systemmessagecontainer-1" class="tsd-kind-icon">System<wbr>Message<wbr>Container</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Type aliases</h2>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
 					<a name="errormessage" class="tsd-anchor"></a>
@@ -105,7 +97,7 @@
 					<div class="tsd-signature tsd-kind-icon">Error<wbr>Message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>error<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">; </span>type<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">"error"</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L22">systemMessage.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/systemMessage.ts#L28">systemMessage.ts:28</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -126,27 +118,9 @@
 					<div class="tsd-signature tsd-kind-icon">System<wbr>Message<span class="tsd-signature-symbol">:</span> <a href="_systemmessage_.html#errormessage" class="tsd-signature-type">ErrorMessage</a><span class="tsd-signature-symbol"> | </span><a href="_systemmessage_.html#unhandledrejectionmessage" class="tsd-signature-type">UnhandledRejectionMessage</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L20">systemMessage.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/systemMessage.ts#L26">systemMessage.ts:26</a></li>
 						</ul>
 					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
-					<a name="systemmessagecontainer" class="tsd-anchor"></a>
-					<h3>System<wbr>Message<wbr>Container</h3>
-					<div class="tsd-signature tsd-kind-icon">System<wbr>Message<wbr>Container<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>__runspace__<span class="tsd-signature-symbol">: </span><a href="_systemmessage_.html#systemmessage" class="tsd-signature-type">SystemMessage</a><span class="tsd-signature-symbol"> }</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L3">systemMessage.ts:3</a></li>
-						</ul>
-					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter">
-								<h5><span class="tsd-flag ts-flagReadonly">Readonly</span> __runspace__<span class="tsd-signature-symbol">: </span><a href="_systemmessage_.html#systemmessage" class="tsd-signature-type">SystemMessage</a></h5>
-							</li>
-						</ul>
-					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
 					<a name="unhandledrejectionmessage" class="tsd-anchor"></a>
@@ -154,7 +128,7 @@
 					<div class="tsd-signature tsd-kind-icon">Unhandled<wbr>Rejection<wbr>Message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>reason<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">; </span>type<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">"unhandledRejection"</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L27">systemMessage.ts:27</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/systemMessage.ts#L33">systemMessage.ts:33</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -170,7 +144,7 @@
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module tsd-is-not-exported">
 					<a name="iserrormessage" class="tsd-anchor"></a>
@@ -182,7 +156,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L42">systemMessage.ts:42</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/systemMessage.ts#L51">systemMessage.ts:51</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -205,7 +179,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L38">systemMessage.ts:38</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/systemMessage.ts#L47">systemMessage.ts:47</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -215,29 +189,6 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">message</span><span class="tsd-signature-symbol"> is </span><span class="tsd-signature-type">SystemMessage</span></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-module">
-					<a name="issystemmessagecontainer" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> is<wbr>System<wbr>Message<wbr>Container</h3>
-					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-module">
-						<li class="tsd-signature tsd-kind-icon">is<wbr>System<wbr>Message<wbr>Container<span class="tsd-signature-symbol">(</span>message<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">message</span><span class="tsd-signature-symbol"> is </span><span class="tsd-signature-type">SystemMessageContainer</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L32">systemMessage.ts:32</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>message: <span class="tsd-signature-type">unknown</span></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">message</span><span class="tsd-signature-symbol"> is </span><span class="tsd-signature-type">SystemMessageContainer</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -251,7 +202,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L47">systemMessage.ts:47</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/systemMessage.ts#L56">systemMessage.ts:56</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -263,65 +214,6 @@
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">message</span><span class="tsd-signature-symbol"> is </span><span class="tsd-signature-type">UnhandledRejectionMessage</span></h4>
 						</li>
 					</ul>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Object literals</h2>
-				<section class="tsd-panel tsd-member tsd-kind-object-literal tsd-parent-kind-module">
-					<a name="systemmessagecontainer-1" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> System<wbr>Message<wbr>Container</h3>
-					<div class="tsd-signature tsd-kind-icon">System<wbr>Message<wbr>Container<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L7">systemMessage.ts:7</a></li>
-						</ul>
-					</aside>
-					<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-object-literal">
-						<a name="systemmessagecontainer-1.error-1" class="tsd-anchor"></a>
-						<h3>error</h3>
-						<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-object-literal">
-							<li class="tsd-signature tsd-kind-icon">error<span class="tsd-signature-symbol">(</span>error<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_systemmessage_.html#systemmessagecontainer" class="tsd-signature-type">SystemMessageContainer</a></li>
-						</ul>
-						<ul class="tsd-descriptions">
-							<li class="tsd-description">
-								<aside class="tsd-sources">
-									<ul>
-										<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L8">systemMessage.ts:8</a></li>
-									</ul>
-								</aside>
-								<h4 class="tsd-parameters-title">Parameters</h4>
-								<ul class="tsd-parameters">
-									<li>
-										<h5>error: <span class="tsd-signature-type">unknown</span></h5>
-									</li>
-								</ul>
-								<h4 class="tsd-returns-title">Returns <a href="_systemmessage_.html#systemmessagecontainer" class="tsd-signature-type">SystemMessageContainer</a></h4>
-							</li>
-						</ul>
-					</section>
-					<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-object-literal">
-						<a name="systemmessagecontainer-1.unhandledrejection" class="tsd-anchor"></a>
-						<h3>unhandled<wbr>Rejection</h3>
-						<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-object-literal">
-							<li class="tsd-signature tsd-kind-icon">unhandled<wbr>Rejection<span class="tsd-signature-symbol">(</span>reason<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">unknown</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_systemmessage_.html#systemmessagecontainer" class="tsd-signature-type">SystemMessageContainer</a></li>
-						</ul>
-						<ul class="tsd-descriptions">
-							<li class="tsd-description">
-								<aside class="tsd-sources">
-									<ul>
-										<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/systemMessage.ts#L13">systemMessage.ts:13</a></li>
-									</ul>
-								</aside>
-								<h4 class="tsd-parameters-title">Parameters</h4>
-								<ul class="tsd-parameters">
-									<li>
-										<h5>reason: <span class="tsd-signature-type">unknown</span></h5>
-									</li>
-								</ul>
-								<h4 class="tsd-returns-title">Returns <a href="_systemmessage_.html#systemmessagecontainer" class="tsd-signature-type">SystemMessageContainer</a></h4>
-							</li>
-						</ul>
-					</section>
 				</section>
 			</section>
 		</div>
@@ -338,7 +230,7 @@
 						<a href="_childprocess_worker_.html">&quot;child<wbr>Process.worker&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_eventemitter_.html">&quot;event<wbr>Emitter&quot;</a>
+						<a href="_events_.html">&quot;events&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="_fixtures_index_.html">&quot;fixtures/index&quot;</a>
@@ -365,9 +257,6 @@
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
 						<a href="_systemmessage_.html#systemmessage" class="tsd-kind-icon">System<wbr>Message</a>
 					</li>
-					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
-						<a href="_systemmessage_.html#systemmessagecontainer" class="tsd-kind-icon">System<wbr>Message<wbr>Container</a>
-					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-module tsd-is-not-exported">
 						<a href="_systemmessage_.html#unhandledrejectionmessage" class="tsd-kind-icon">Unhandled<wbr>Rejection<wbr>Message</a>
 					</li>
@@ -377,14 +266,8 @@
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-is-not-exported">
 						<a href="_systemmessage_.html#issystemmessage" class="tsd-kind-icon">is<wbr>System<wbr>Message</a>
 					</li>
-					<li class=" tsd-kind-function tsd-parent-kind-module">
-						<a href="_systemmessage_.html#issystemmessagecontainer" class="tsd-kind-icon">is<wbr>System<wbr>Message<wbr>Container</a>
-					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module tsd-is-not-exported">
 						<a href="_systemmessage_.html#isunhandledrejectionmessage" class="tsd-kind-icon">is<wbr>Unhandled<wbr>Rejection<wbr>Message</a>
-					</li>
-					<li class=" tsd-kind-object-literal tsd-parent-kind-module">
-						<a href="_systemmessage_.html#systemmessagecontainer-1" class="tsd-kind-icon">System<wbr>Message<wbr>Container</a>
 					</li>
 				</ul>
 			</nav>
@@ -396,7 +279,6 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
-				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
