--- a/modules/_thread_worker_.html
+++ b/modules/_thread_worker_.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;thread.worker&quot; | @suin/runspace - v1.1.0</title>
-	<meta name="description" content="Documentation for @suin/runspace - v1.1.0">
+	<title>&quot;thread.worker&quot; | @suin/runspace - v2.0.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v1.1.0</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -94,7 +94,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/thread.worker.ts#L62">thread.worker.ts:62</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.worker.ts#L62">thread.worker.ts:62</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -120,7 +120,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/thread.worker.ts#L56">thread.worker.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.worker.ts#L56">thread.worker.ts:56</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -148,7 +148,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/thread.worker.ts#L50">thread.worker.ts:50</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.worker.ts#L50">thread.worker.ts:50</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -176,7 +176,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v1.1.0/thread.worker.ts#L9">thread.worker.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.0.0/thread.worker.ts#L9">thread.worker.ts:9</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -223,7 +223,7 @@
 						<a href="_childprocess_worker_.html">&quot;child<wbr>Process.worker&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
-						<a href="_eventemitter_.html">&quot;event<wbr>Emitter&quot;</a>
+						<a href="_events_.html">&quot;events&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="_fixtures_index_.html">&quot;fixtures/index&quot;</a>
@@ -266,7 +266,6 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
-				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
